2002-01-11  Glynn Foster  <glynn.foster@sun.com>

	* panel-applet.c, panel-applet.h, test-bonobo-applet.c: Do what 
	I was supposed to be doing before..but this time for real.
	s/backgound/background.

2002-01-11  Glynn Foster  <glynn.foster@sun.com>

	* panel-applet.c: (panel_applet_set_prop): s/backgound/background

2002-01-09  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet.c:
	(panel_applet_parse_pixmap_str): fix silly.
	(panel_applet_get_pixmap): create a new GC.
	(panel_applet_set_prop): unref the pixmap.
	(panel_applet_class_init): update signal param type.

	* test-bonobo-applet.c:
	(test_applet_handle_background_change): add a test to
	demonstrate that this doesn't work yet.

2002-01-08  Mark McLoughlin  <mark@skynet.ie>

	Implement the applet side of the pixmap background stuff.

	* panel-applet.[ch]: (panel_applet_finalize): free background.
	(panel_applet_parse_pixmap_str), (panel_applet_get_pixmap): impl
	parsing of pixmap string and copying pixmap area.
	(panel_applet_set_prop): update for pixmap changes.
	(panel_applet_class_init): update background-changed signal.

	* panel-applet-marshal.list: change VOID:ENUM,POINTER,STRING to
	VOID:ENUM,POINTER,OBJECT.

2002-01-08  Mark McLoughlin  <mark@skynet.ie>

	* TODO: add pixmap bacground todo.

	* panel-applet.c: (panel_applet_associate_schemas_in_dir):
	fix horked error checking.

2002-01-04  Glynn Foster  <glynn.foster@sun.com>

	* panel-applet-gconf.h: Remove include of ghash.h. Not needed.

2002-01-04  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet.c: (panel_applet_factory_main_closure),
	(panel_applet_factory_main), (panel_applet_shlib_factory_closure),
	(panel_applet_shlib_factory): fix precondition FIXMEs.

Thu Jan 03 12:48:23 2002  George Lebl <jirka@5z.com>

	* panel-applet.[ch]: mvoe gnome_program_init into the macro and
	  remove unused parameters from the main functions.  though applets
	  using the macro should see no difference and I don't think anyone