@@ -1,3 +1,8 @@
+2002-01-11  Mark McLoughlin  <mark@skynet.ie>
+
+	* panel-applet.c: (panel_applet_associate_schemas_in_dir):
+	fix leaks.
+
 2002-01-11  Glynn Foster  <glynn.foster@sun.com>
 
 	* panel-applet.c, panel-applet.h, test-bonobo-applet.c: Do what 
